--- a/picoparkcountdown.html
+++ b/picoparkcountdown.html
@@ -11,12 +11,12 @@
 		}
 	</style>
 </head>
-<body>
+<body background = "https://cdn.akamai.steamstatic.com/steam/apps/1509960/header.jpg">
 	<h2 style="text-align:center">Pico Park Countdown</h2>
 	<div id="countdown" style="text-align:center;font-size:30pt">Make sure Javascript is enabled!</div>
 	<script>
 		var countdown = document.getElementById("countdown");
-		var target = 1649714400;
+		var target = 1649715300;
 		function doCD()
 		{
 			var time = Math.round(target-(new Date().getTime()/1000));
