--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title></title>
-	<meta http-equiv="refresh" content="0; URL=http://www.1023mb.net/portfolio.pdf" />
+	<meta http-equiv="refresh" content="0; URL=https://www.1023mb.net/portfolio.pdf" />
 </head>
 <body>
 </body>
