--- a/handwriting/index.html
+++ b/handwriting/index.html
@@ -10,7 +10,7 @@
         <div id="prompt">
             <p> Upload your handwriting file here </p>
             <input type="file" accept=".json" id="fileUpload" onchange = "uploadFile()"/>
-            <p> Don't have a handwriting file? Generate one <a href="/train"> here! </a> </p>
+            <p> Don't have a handwriting file? Generate one <a href="./train"> here! </a> </p>
             <br>
         </div>
         <div id="type" style="display: none">
