--- a/handwriting/train/index.html
+++ b/handwriting/train/index.html
@@ -8,6 +8,7 @@
     <body>
         <h2> Generate your handwriting file. </h2>
         <p> Draw the letter in the canavs.  Press next to move on to the next letter, or press clear to redraw the letter. </p>
+        <a href="../"> Back to handwriting site </a>
         <p id="letter"> </p>
         <button onclick="next()"> Next </button>
         <button onclick="clear()"> Clear </button>
