--- a/handwriting/train/index.html
+++ b/handwriting/train/index.html
@@ -11,7 +11,7 @@
         <a href="../"> Back to handwriting site </a>
         <p id="letter"> </p>
         <button onclick="next()"> Next </button>
-        <button onclick="clear()"> Clear </button>
+        <button onclick="clearLetter()"> Clear </button>
         <button id="downloadButton" style="visibility: hidden;"> <a id="downloadLink"> Download Handwriting File </a> </button>
         <br>
         <br>
