--- a/handwriting/index.html
+++ b/handwriting/index.html
@@ -10,14 +10,14 @@
         <div id="prompt">
             <p> Upload your handwriting file here </p>
             <input type="file" accept=".json" id="fileUpload" onchange = "uploadFile()"/>
-            <p> Don't have a handwriting file? Generate one <a href="./train"> here! </a> </p>
+            <p> Don't have a handwriting file? Generate one <a href="/train"> here! </a> </p>
             <br>
         </div>
         <div id="type" style="display: none">
             <p> Note that you can only type lowercase letters </p>
             <textarea id="text" placeholder="Type here!"></textarea>
             <label> Horizontal spacing </label>
-            <input type="number" id="letterWidth" style="width: 50px" value="50"/>
+            <input type="number" id="letterWidth" style="width: 50px" value="25"/>
             <br>
         </div>
     </body>
