--- a/handwriting/train/index.html
+++ b/handwriting/train/index.html
@@ -6,8 +6,8 @@
         <script language="javascript" type="text/javascript" src="sketch.js"></script>
     </head>
     <body>
-        <h2> Generate your handwriting file. </h2>
-        <p> Draw the letter in the canavs.  Press next to move on to the next letter, or press clear to redraw the letter. </p>
+        <h2> Generate your handwriting file </h2>
+        <p> Draw the letter in the canvas.  Press next to move on to the next letter, or press clear to redraw the letter. </p>
         <a href="../"> Back to handwriting site </a>
         <p id="letter"> </p>
         <button onclick="next()"> Next </button>
