--- a/bezier/index.html
+++ b/bezier/index.html
@@ -9,6 +9,8 @@
     </head>
     <body>
         <input id = "t" type="range" min="0" max="1" step="0.01">
+        <input type ="checkbox" id="show" onclick="updateShow()">
+        <label> Show Construction </label>
         <br>
     </body>
 </html>
