--- a/bezier/index.html
+++ b/bezier/index.html
@@ -8,6 +8,7 @@
         <script language="javascript" type="text/javascript" src="Curve.js"></script>
     </head>
     <body>
+        <p> Click to add points to the curve! </p>
         <input id = "t" type="range" min="0" max="1" step="0.01">
         <input type ="checkbox" id="show" onclick="updateShow()">
         <label> Show Construction </label>
