--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
         <p>Clock</p>
       </div>
     </a>
+    
+        <a href="/bezier">
+      <div class="iconDiv">
+        <img class="iconImg" src="Icons/Bezier_Icon.png" />
+        <p>Bézier Curve Generator</p>
+      </div>
+    </a>
 
     <br>
     <br>
