--- a/bezier/index.html
+++ b/bezier/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <p> Click to add points to the curve! </p>
+        <label> t (0-1)</label>
         <input id = "t" type="range" min="0" max="1" step="0.01">
         <input type ="checkbox" id="show" onclick="updateShow()">
         <label> Show Construction </label>
