Various changes to home page

--- a/index.html
+++ b/index.html
@@ -1,113 +1,16 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>1023mb</title>
+    <meta charset="UTF-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/hapticdata/toxiclibsjs@0.3.2/build/toxiclibs.js"></script>
+    <script language="javascript" type="text/javascript" src="HomePage/sketch.js"></script>
+    <script language="javascript" type="text/javascript" src="HomePage/Particle.js"></script>
+    <script language="javascript" type="text/javascript" src="HomePage/Spring.js"></script>
+    <script language="javascript" type="text/javascript" src="HomePage/SoftBody.js"></script>
+    <link rel="stylesheet" href="HomePage/style.css">
   </head>
   <body>
-
-    <h1 style="color: #dddddd"> Tools </h1>
-    <br>
-
-    <a href="/beamloading">
-      <div class="iconDiv">
-        <img class="iconImg" src="Icons/Beam_Loading_Icon.png" />
-        <p>Beam Load Calculator</p>
-      </div>
-    </a>
-
-    <a href="/derivative-grapher">
-      <div class="iconDiv">
-        <img class="iconImg" src="Icons/Derivative_Grapher_Icon.png" />
-        <p>Derivative Grapher</p>
-      </div>
-    </a>
-
-    <a href="/mixturephasecalculator">
-      <div class="iconDiv">
-        <img class="iconImg" src="Icons/Mixture_Phase_Calculator_Icon.png" />
-        <p>Mixture Calculator</p>
-      </div>
-    </a>
-
-    <a href="/terraingenerator">
-      <div class="iconDiv">
-        <img class="iconImg" src="Icons/Terrain_Generator_Icon.png" />
-        <p>2D Terrain Generator</p>
-      </div>
-    </a>
-
-    <a href="/boxplotgenerator">
-      <div class="iconDiv">
-        <img class="iconImg" src="Icons/Boxplot_Generator_Icon.png" />
-        <p>Box Plot Generator</p>
-      </div>
-    </a>
-
-    <a href="/rsscalc">
-      <div class="iconDiv">
-        <img class="iconImg" src="Icons/RSSCalc_Icon.png" />
-        <p>RSS Uncertainty</p>
-      </div>
-    </a>
-
-    <br>
-
-    <a href="/inversekinematics">
-      <div class="iconDiv">
-        <img class="iconImg" src="Icons/Inverse_Kinematics_Icon.png" />
-        <p>Inverse Kinematics</p>
-      </div>
-    </a>
-
-    <a href="/clock">
-      <div class="iconDiv">
-        <img class="iconImg" src="Icons/Clock_Icon.png" />
-        <p>Clock</p>
-      </div>
-    </a>
-    
-        <a href="/bezier">
-      <div class="iconDiv">
-        <img class="iconImg" src="Icons/Bezier_Icon.png" />
-        <p>Bézier Curve Generator</p>
-      </div>
-    </a>
-
-    <br>
-    <br>
-    <h2> <a href="http://games.1023mb.net" style = "color: #dddddd"> Click here to visit the games page! </a> </h2>
-
   </body>
-  
-  <style>
-  body {
-    background-color: #030327;
-  }
-  .iconImg {
-    width: 120px;
-    border-radius: 50%;
-  }
-  p {
-    color: #dddddd;
-  }
-  .iconDiv {
-    width: 150px;
-    height: 160px;
-    display: inline-block;
-    text-align: center;
-    padding-top: 5px;
-  }
-  .iconDiv:hover {
-    background-color: #052549;
-  }
-  .iconDiv:hover > p {
-    color: white;
-  }
-
-  a {
-    text-decoration: none;
-  }
-</style>
-  
 </html>
