--- a/terrain-generator/index.html
+++ b/terrain-generator/index.html
@@ -24,7 +24,9 @@ var grid = [];
 
 var thresh = 4;
 
-var iterations = 7;
+var iterations = 10;
+var iterationsCounter = 0;
+var startFrameCount = 0;
 
 
 function setup() {
@@ -49,16 +51,25 @@ function setup() {
 			grid[r][c].setNeighbors();
 		}
 	}
+	startFrameCount = frameCount;
 
-	for (let i = 0; i < iterations; i += 1) {
-		smoothGround();
-	}
+	// for (let i = 0; i < iterations; i += 1) {
+	// 	smoothGround();
+	// }
 }
 
 function draw() {
-	for (let r = 0; r < rows; r += 1) {
-		for (let c = 0; c < cols; c += 1) {
-			grid[r][c].show();
+	if (frameCount > startFrameCount) {
+		frameRate(1);
+		background(255);
+		if (iterationsCounter < iterations) {
+			smoothGround();
+			iterationsCounter++;
+		}
+		for (let r = 0; r < rows; r += 1) {
+			for (let c = 0; c < cols; c += 1) {
+				grid[r][c].show();
+			}
 		}
 	}
 }
