--- a/box-plot-generator/index.html
+++ b/box-plot-generator/index.html
@@ -17,7 +17,23 @@
 		<button type = "button" id = "goButton" onclick = "separateData()"> Go! </button>
 	</div>
 
+	<div class="dropdown">
+		<button onclick="showRules()" class="dropbtn">Instructions</button>
+  		<div id="myDropdown" class="dropdown-content">
+    		<p> Enter data into the textbox </p>
+    		<p> Press "Go!" to generate a box plot of the data </p>
+    		<p> See info about the min, max, quartiles, and outliers </p>
+    		<p> Change the delineation markings by changing the number of dashes displayed</p>
+    	</div>
+	</div>
+
 	<canvas> </canvas>
+
+<script>
+	function showRules() {
+		document.getElementById("myDropdown").classList.toggle("show");
+	}
+</script>
 
 <script>
 
@@ -323,6 +339,46 @@ textarea {
 canvas {
 	margin-top: 10px;
 }
+
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #3e8e41;
+}
+
+.dropdown {
+    position: absolute;
+    display: inline-block;
+    left: 1000px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content p {
+    color: black;
+    padding: 5px 12px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown a:hover {background-color: #f1f1f1}
+
+.show {display:block;}
 
 </style>
 
