--- a/mixture-calculator/index.html
+++ b/mixture-calculator/index.html
@@ -68,6 +68,17 @@
 					<option> kg </option>
 				</select>
 			</td>
+			<td colspan="2" rowspan="3">
+				<p>
+					Instructions: Choose a substance and how much of the substance is solid, liquid, and gas.
+					<br>
+					Properties of common liquids are stored, but you may change them or create your own
+					<br>
+					Press "Solve!" to see how much solid, liquid, and gas is in the mixture once it reaches thermal equilibrium
+					<br>
+					Press "Show Work" to see the calculations
+				</p>
+			</td>
 		</tr>
 		<tr>
 			<td>
