--- a/beam-loading/index.html
+++ b/beam-loading/index.html
@@ -72,9 +72,62 @@
 			</tr>
 		</table>
 	</div>
-
+	<div class="dropdown">
+		<button onclick="showRules()" class="dropbtn">Instructions</button>
+  		<div id="myDropdown" class="dropdown-content">
+    		<p> Enter beam length and support positions </p>
+    		<p> Add types of load to the beam. You may add any number of each type </p>
+    		<p> Press "Submit" when done </p>
+    		<p> The shear force diagram and the bending moment diagram will be generated </p>
+    	</div>
+	</div>
 </body>
 
+<script>
+	function showRules() {
+    	document.getElementById("myDropdown").classList.toggle("show");
+	}
+</script>
+
 <style>
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #3e8e41;
+}
+
+.dropdown {
+    position: absolute;
+    display: inline-block;
+    left: 1000px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content p {
+    color: black;
+    padding: 5px 12px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown a:hover {background-color: #f1f1f1}
+
+.show {display:block;}
 </style>
 </html>
