Added map maker and sierpinski to home page

--- a/Sierpinski/index.html
+++ b/Sierpinski/index.html
@@ -39,7 +39,7 @@
         function draw() {
             background(0);
             let x = width*0.05;
-            let y = height*0.95
+            let y = height*0.95;
             let angle = 0;
             for (let i = 1; i < instructions.length; i += 2) {
                 let dx = lineSize*Math.cos(angle);
