--- a/bezier/index.html
+++ b/bezier/index.html
@@ -11,7 +11,7 @@
         <p> Click to add points to the curve! </p>
         <label> t (0-1)</label>
         <input id = "t" type="range" min="0" max="1" step="0.01">
-        <input type ="checkbox" id="show" onclick="updateShow()">
+        <input type ="checkbox" id="show" onclick="updateShow()" checked>
         <label> Show Construction </label>
         <br>
     </body>
